syntax = "proto3";

package proto;

option go_package = "auth-service/gen/go/proto";

import "google/api/annotations.proto";

service AuthService {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/api/v1/auth/health"
    };
  }
  
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/register"
      body: "*"
    };
  }
  
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };
  }
}

message HealthCheckRequest {}
message HealthCheckResponse {
  string service = 1;
  string status = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}
message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string ip_address = 3;
  string user_agent = 4;
}
message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}