syntax = "proto3";

package proto;

option go_package = "order-service/gen/go";

import "google/api/annotations.proto";

service OrderService {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/api/v1/orders/health"
    };
  }
  
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/api/v1/orders"
      body: "*"
    };
  }

  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse) {
    option (google.api.http) = {
      get: "/api/v1/orders/{order_id}"
    };
  }

  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse) {
    option (google.api.http) = {
      get: "/api/v1/orders"
    };
  }

  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse) {
    option (google.api.http) = {
      patch: "/api/v1/orders/{order_id}/status"
      body: "*"
    };
  }
}

message HealthCheckRequest {}
message HealthCheckResponse {
  string service = 1;
  string status = 2;
}

message CreateOrderRequest {
  repeated OrderItem items = 1;
  string shipping_address = 2;
  string shipping_city = 3;
  string shipping_country = 4;
  string shipping_postal_code = 5;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
}

message CreateOrderResponse {
  string order_id = 1;
  string message = 2;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  string order_id = 1;
  string user_id = 2;
  string status = 3;
  double total_amount = 4;
  repeated OrderItem items = 5;
  string shipping_address = 6;
  string shipping_city = 7;
  string shipping_country = 8;
  string shipping_postal_code = 9;
  string created_at = 10;
  string updated_at = 11;
}

message ListOrdersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListOrdersResponse {
  repeated OrderInfo orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message OrderInfo {
  string order_id = 1;
  string user_id = 2;
  string status = 3;
  double total_amount = 4;
  string created_at = 5;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  string message = 1;
}

